--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rx-bootstrap-react-components",
   "version": "0.0.1",
   "description": "React Components with Bootstrap and ReactiveX",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register",
     "compile": "babel -d lib/ src/",
@@ -16,7 +16,8 @@
     "React",
     "Component",
     "Bootstrap",
-    "ReactiveX"
+    "ReactiveX",
+    "react-component"
   ],
   "author": "Maximiliano Felice",
   "license": "MIT",
@@ -37,6 +38,7 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "react-tools": "^0.13.3"
   }
 }
