--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "mocha": "^2.4.5",
+    "react-addons-test-utils": "^15.0.2",
     "react-tools": "^0.13.3"
   }
 }
