--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React Components with Bootstrap and ReactiveX",
   "main": "src/index.js",
   "scripts": {
+    "test-brk": "mocha --compilers js:babel-core/register --debug-brk",
     "test": "mocha --compilers js:babel-core/register",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
@@ -30,7 +31,8 @@
     "babel-preset-stage-1": "^6.5.0",
     "react": "^15.0.2",
     "rx": "^4.1.0",
-    "rx-jquery": "^1.1.7"
+    "rx-jquery": "^1.1.7",
+    "rx-react": "git+https://github.com/MaximilianoFelice/rx-react.git"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
@@ -40,6 +42,7 @@
     "chai-as-promised": "^5.3.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.2",
-    "react-tools": "^0.13.3"
+    "react-tools": "^0.13.3",
+    "when": "^3.7.7"
   }
 }
