Refactored props mutability

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "deep-assign": "^2.0.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.1",
     "rx": "^4.1.0",
