--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test-brk": "mocha --compilers js:babel-core/register --debug-brk",
-    "test": "mocha --compilers js:babel-core/register",
+    "test": "mocha --compilers js:babel-core/register --require test/utils/dom.js",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
   },
@@ -42,9 +42,12 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "mocha": "^2.4.5",
+    "jsdom": "^9.2.1",
+    "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.0.2",
+    "react-dom": "^15.1.0",
     "react-tools": "^0.13.3",
+    "should": "^9.0.1",
     "when": "^3.7.7"
   }
 }
