--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-progress-button": "^5.0.0",
+    "react-visibility-sensor": "^3.3.0",
     "rx": "^4.1.0",
     "rx-jquery": "^1.1.7",
     "rx-react": "git+https://github.com/MaximilianoFelice/rx-react.git"
